# lead_detection

./: Hillsborough_hth_2021_2024.csv  README.md  fl_climate_data_download.py  main.py  process_data_wind_temperature_precipitation.py  pyproject.toml  roofing.csv  scoof.ini  scroofer.py  util.py
Datasets/: 2021_week_weather_data.csv  Hillsborough_2021_to_2024.csv  Total_Hillsborough_2021_2024.csv  code_city.csv  county_city.csv
astre/: index.html  package-lock.json  package.json
astre/public/: florida.json
astre/src/: main.ts  style.css
