[project]
name = "scroofer"
version = "0.1.0"
description = "Webscraper to look at commercial roofing permits in Hillsborough County, Florida"
authors = [
  { name = "Anson Lee" },
  { name = "Ravneet Singh Bhatia", email = "ravneet.bhatia@outlook.com" },
  { name = "Steven Buks" },
  { name = "Tianqi Min" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "bs4>=0.0.2",
  "configparser>=7.2.0",
  "mechanicalsoup>=1.4.0",
  "pandas>=2.3.2",
  "selenium>=4.35.0",
]
